<resources>
    <string name="app_name">CrimeReportApp</string>
    <string name="title_home">Home</string>
    <string name="title_activity_city_page">CityPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_detailed_data_view">DetailedDataView</string>

    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="report">Report</string>
    <string name="title_activity_city_info">CityInfo</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeTitle">Home</string>
    <string name="google_maps_key">AIzaSyDJpBO_1K2ZP98qXsxGQHfoYZana85IFw8</string>
    <string name="location">Location</string>
    <string name="trend">Trend</string>
    <string name="summary">Summary</string>
    <string name="myCityName">My City</string>
    <string name="provo">Provo</string>
    <string name="view_current_location">Current Location</string>

</resources>
