<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CityInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Provo, UT"
                    android:textColor="@color/title_color"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/favorite_button"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="right|center_horizontal|end"
                    android:background="@color/white"
                    android:src="@drawable/ic_fav" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/score_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/score_circle" />

                <TextView
                    android:id="@+id/score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/score_background"
                    android:layout_alignRight="@+id/score_background"
                    android:layout_centerVertical="true"
                    android:text="88"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="#fff"
                    android:textSize="100sp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trend_city_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/trend"
                    android:textColor="@color/title_color"
                    android:textSize="34sp" />

                <com.anychart.AnyChartView
                    android:id="@+id/trend_chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/summary"
                    android:textColor="@color/title_color"
                    android:textSize="34sp" />

                <com.anychart.AnyChartView
                    android:id="@+id/summary_chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <ProgressBar
                    android:id="@+id/summary_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mapsFragLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="100dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/location"
                    android:textColor="@color/title_color"
                    android:textSize="34sp" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragmentContainerView"
                    android:background="@drawable/round_background_map"
                    android:name="com.example.crimereportapp.MapsFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>